@@ -491,4 +491,26 @@ public class Test {
 }
         ]]></code>
     </test-code>
+
+    <test-code>
+        <description>#794 False positive on PreserveStackTrace with anonymous inner</description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+import java.io.IOException;
+
+public class Bug {
+    void test() throws IOException {
+        try {
+            // do something
+        } catch (final IOException e) {
+            throw new IOException("b") {
+                {
+                    initCause(e);
+                }
+            };
+        }
+    }
+}
+        ]]></code>
+    </test-code>
 </test-data>
